--- a/Practica_Sem1/nbproject/project.properties
+++ b/Practica_Sem1/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Calculos.jar
+dist.jar=${dist.dir}/Practica_Sem1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Calculos
+dist.jlink.output=${dist.jlink.dir}/Practica_Sem1
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Calculos
-main.class=calculos.main
+jlink.launcher.name=Practica_Sem1
+main.class=Practica_Sem1.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
